# bcd-optimization

./: .gitignore  README.md  bcd_22input.dot  bcd_23input.dot  bcd_7seg.c  bcd_7seg.dot  bcd_7seg.v  pyproject.toml  search_optimal.py  search_with_4input.py  spec.md
bcd_optimization/: __init__.py  cli.py  export.py  multi_level.py  quine_mccluskey.py  solver.py  truth_tables.py  verify.py
